[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/Generic_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Frame_Message.png" type="Texture" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/GnuUnifontFull-Pm9P.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.22211
margin_top = 0.950012
margin_right = 3.22211
margin_bottom = 0.949951
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 539.567 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 270.464 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_top = -1.0
margin_right = 537.0
margin_bottom = 1079.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 143.0
margin_top = 348.0
margin_right = 394.0
margin_bottom = 734.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 16

[node name="Easy_Button" parent="." instance=ExtResource( 1 )]
position = Vector2( 209.215, 472 )

[node name="Normal_Button" parent="." instance=ExtResource( 1 )]
position = Vector2( 209.215, 552 )

[node name="Hard_Button" parent="." instance=ExtResource( 1 )]
position = Vector2( 209.215, 632 )

[node name="Titulo" type="Label" parent="."]
margin_left = 162.0
margin_top = 384.713
margin_right = 372.0
margin_bottom = 424.713
custom_fonts/font = SubResource( 1 )
text = "DIFICULDADE"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="_pressed" from="Easy_Button" to="." method="_on_Easy_Button__pressed"]
[connection signal="_pressed" from="Normal_Button" to="." method="_on_Normal_Button__pressed"]
[connection signal="_pressed" from="Hard_Button" to="." method="_on_Hard_Button__pressed"]
